# NUI

./: .gitattributes  .gitignore  .platform_cache  NUI.html  RELEASE_INFO.txt  VERSION  app.py  check_dependencies.py  check_port_pairs.py  cl_cache.sh  compare_files.py  convert.py  convert.sh  create_release.py  dashboard.py  demo_mcp_client.py  lab_config.json  lab_monitor.py  lab_status.json  lldp_discovery.py  main.py  mcp_server.py  organize_test_reports.py  pyproject.toml  pytest.ini  reconvert.py  requirements.txt  run_scheduled_profile.py  schedule_app.js  schedule_style.css  split_and_report.py  topology_viewer.html
cict_test/: __init__.py  conftest.py  test_config.py  test_cross_platform.py  test_dashboard_logic.py  test_health.py  test_http_versioning.py  test_lab_monitor_schedule.py  test_logging.py  test_middleware.py  test_organize_reports.py  test_repositories.py  test_run_scheduled_profile.py  test_schedule_auto_start.py  test_services.py  test_thread_safe_state.py  test_validators.py
config/: __init__.py  logging_config.py  settings.py
docs/: CROSS_PLATFORM_DEPLOYMENT.md  DOCUMENTATION_UPDATE.md  INDEX.md  LINUX_COMPATIBILITY.md  MCP_INTEGRATION.md  PHASE1_COMPLETE.md  PHASE1_INTEGRATION_STATUS.md  PHASE1_SUMMARY.md  PHASE2_DASHBOARD_BLUEPRINT.md  PHASE3_COMPLETION_REPORT.md  README.md  REFACTORING_PLAN.md  REST_API_EXAMPLES.md  SCHEDULE_PROFILE_DURATIONS.md  TEST_PLAN.md  TEST_RESULTS.md  TEST_SUMMARY.md  THREAD_SAFE_STATE.md  TOPOLOGY_AUTO_SAVE.md  TOPOLOGY_UPDATE.md  TRANSCEIVER_INFO.md  UV_SETUP.md  WEDGE800BACT_CONVERSION_RULES.md  (+2 more)
(+171 files in other folders)
