[project]
name = "nui"
version = "0.1.0"
description = "NUI web and lab monitoring tools"
readme = "docs/README.md"
requires-python = ">=3.9"
dependencies = [
    "Flask>=2.0",
    "requests>=2.0",
    "Flask-Limiter>=3.0",
    "PyJWT>=2.0",
    "python-crontab>=3.2.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "psutil",
    "playwright>=1.40.0",
]
